[tool.poetry]
name = "diabets-decision-3"
version = "0.1.0"
description = "The third practice"
authors = ["Asncodes-80 <asn80.asn@hotmail.com>"]
license = "GNU3"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
